# handlematters

./: Cargo.toml  LICENSE  Makefile  README.md  README.md.hms
.github/actions/cargo/: action.yml
.github/workflows/: release.yml
examples/: cargo.hms  hello.hms  hello.hms.hms
examples/hello/: context  template
src/: evaluate_context.rs  extract_blocks.rs  lib.rs  main.rs  source.rs
tests/: cli.rs
