[package]
name = "handlematters"
version = "0.2.0"
edition = "2021"
description = "Self-contained template system with Handlebars and inline shell scripts"
authors = ["Keita Urashima <ursm@ursm.jp>"]
license = "MIT"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.7", features = ["derive"] }
handlebars = "4.3.6"
indoc = "1.0.8"
serde_yaml = "0.9.16"

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "2.1.5"
tempfile = "3.2.0"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
