[package]
name = "handlematters"
version = "0.2.0"
edition = "2021"
description = "Self-contained template system with Handlebars and inline shell scripts"
authors = ["Keita Urashima <ursm@ursm.jp>"]
license = "MIT"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.1.11", features = ["derive"] }
handlebars = "4.3.6"
indoc = "2.0.4"
serde_yaml = "0.9.25"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.0.4"
tempfile = "3.10.1"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
