[package]
name = "handlematters"
version = "0.2.1"
edition = "2021"
description = "Self-contained template system with Handlebars and inline shell scripts"
homepage = "https://github.com/ursm/handlematters"
authors = ["Keita Urashima <ursm@ursm.jp>"]
license = "MIT"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.14", features = ["derive"] }
handlebars = "6.0.0"
indoc = "2.0.4"
serde_yaml = "0.9.25"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.0.4"
tempfile = "3.12.0"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
